<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="341dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_register"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressEditTextLayout"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adressInputEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/address"
            android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditTextInput"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditTextInput"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/password"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <TextView
        android:id="@+id/tvRegisterHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/registerHaveAccount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


    <TextView
        android:id="@+id/tvLoginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="35dp"
        android:text="@string/login_now"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvRegisterHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>