<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tvLoginWords"
        android:layout_width="332dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_login"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginWords">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailInputEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/email"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="319dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordInputLayout"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/password"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInputLayout" />

    <TextView
        android:id="@+id/tvLoginHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="6dp"
        android:text="@string/loginHaveAccount"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        app:layout_constraintEnd_toStartOf="@+id/tvRegisterNow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/register_now"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsbold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLoginHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>