<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="@color/green">

        <ImageView
            android:id="@+id/scanImage"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNamaProduk"
            android:layout_width="293dp"
            android:layout_height="19dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/namaproduk"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/poppinsregular"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/scanImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIngredient"
            android:layout_width="297dp"
            android:layout_height="21dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:text="@string/ingredients"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/scanImage"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaProduk" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="125dp"
            android:layout_height="21dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            android:text="@string/date"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scanImage"
            app:layout_constraintTop_toBottomOf="@+id/tvIngredient"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="18dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/poppinsregular"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/tvIngredient"
            app:layout_constraintVertical_bias="0.25" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
